# jit-compiler-simulation

./: CMakeLists.txt  README.md  TODO.md  bytecode.h  interpreter.cpp  interpreter.h  jit_compiler.cpp  jit_compiler.h  main.cpp  optimized_code.txt  optimizer.cpp  optimizer.h  profiler.cpp  profiler.h
